--- a/src/styles/page-transition.scss
+++ b/src/styles/page-transition.scss
@@ -23,10 +23,29 @@
   align-items: center;
   backface-visibility: hidden;
 
-  transform-origin: right center;
-  transition: transform 1s ease-in-out, left 1s ease-in-out;
+  &.left {
+    transform-origin: left center;
 
-  left: 100%;
+    &.section-enter-active {
+      animation: fade-in-right 1s forwards ease-in-out;
+    }
+
+    &.section-enter-active + section {
+      animation: fade-out-right 1s forwards ease-in-out;
+    }
+  }
+
+  &.right {
+    transform-origin: right center;
+
+    &.section-enter-active {
+      animation: fade-in-left 1s forwards ease-in-out;
+    }
+
+    &.section-enter-active + section {
+      animation: fade-out-left 1s forwards ease-in-out;
+    }
+  }
 
   &.home {
     background-color: rgb(116, 68, 68);
@@ -41,51 +60,15 @@
   }
 }
 
-.section-enter-active {
-  left: 0;
-}
-
-.section-enter-done {
-  left: 0;
-}
-
-.section-enter-active + section {
-  transform: rotateY(-60deg);
-  left: -100%;
-}
-
-.section-enter-done + section {
-  transform: rotateY(-60deg);
-  left: -100%;
-}
-
-/* .section-exit-active {
-  left: -100%;
-}
-
-.section-exit-done {
-  left: -100%;
-} */
-
-//   transform: rotateY(-60deg);
-
-/* .section-enter-active {
-  animation: fade-in 10000ms forwards ease-in-out;
-}
-
-.section-exit-active {
-  animation: fade-out 10000ms forwards ease-in-out;
-} */
-
 .navbar {
   z-index: 1000;
-  position: fixed;
+  position: absolute;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 75px;
-  background-color: gray;
+  background-color: transparent;
 
   a {
     padding-right: 50px;
@@ -93,7 +76,7 @@
   }
 }
 
-@keyframes fade-in {
+@keyframes fade-in-left {
   0% {
     left: 100%;
   }
@@ -103,12 +86,36 @@
   }
 }
 
-@keyframes fade-out {
+@keyframes fade-out-left {
   0% {
     left: 0;
+    transform: rotateY(0deg);
   }
 
   100% {
     left: -100%;
+    transform: rotateY(-60deg);
+  }
+}
+
+@keyframes fade-in-right {
+  0% {
+    left: -100%;
+  }
+
+  100% {
+    left: 0;
+  }
+}
+
+@keyframes fade-out-right {
+  0% {
+    left: 0;
+    transform: rotateY(0deg);
+  }
+
+  100% {
+    left: 100%;
+    transform: rotateY(60deg);
   }
 }
